2010-06-01  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        Fix "variable may be used before being set" warning in TextResourceDecoder::checkForHeadCharset
        https://bugs.webkit.org/show_bug.cgi?id=40001

        No new tests as there is no new functionality.

        Initialize len to 0 just to eliminate the compiler warning.

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::checkForHeadCharset):

Canonical link: https://commits.webkit.org/51562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60529 268f45cc-cd09-0410-ab3c-d52691b4dbfc